<resources>
    <string name="app_title">Train&amp;Gain</string>
    <string name="register_title">Register</string>
    <string name="app_name">TrainGain</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1571512883067696</string>
    <string-array name="nav_slider_items">
        <item>Home</item>
        <item>Search</item>
        <item>Graph</item>
        <item>Profile</item>
        <item>Calculator</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_caculate_metrics">Calculate Metrics</string>
    <string name="action_search">Search</string>
    <string name="action_my_programs">My Programs</string>
    <string-array name="homepage_names">
        <item>Training Programs</item>
        <item>Calculations</item>
        <item>Favourites</item>
        <item>Stats</item>
        <item>Settings</item>
    </string-array>
    <string-array name="button_names">
        <item>Training</item>
        <item>Statistics</item>
    </string-array>
    <string name="confirm_registry">Email not found. Do you want to register? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="complete_registration">Confirm?</string>
    <string name="updatingReport">Updating Report</string>
    <string name="testing">id is 2!!!</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_azure_services">AzureServicesActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_test_adding">Login</string>
    <string name="title_activity_call_api">CallAPI</string>
    <string name="title_activity_training__program">Training_Program</string>
    <string name="title_activity_training_program">TrainingProgram</string>
    <string name="title_activity_list_program">ListProgram</string>
    <string name="title_trainingprogram_list">Training Programs</string>
    <string name="title_trainingprogram_detail">Training Program Detail</string>
    <string name="title_test_list">Tests</string>
    <string name="title_test_detail">Test Detail</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_calc_health_metrics">CalcHealthMetrics</string>
    <string name="title_personalprogram_list">PersonalPrograms</string>
    <string name="title_personalprogram_detail">PersonalProgram Detail</string>
    <string name="title_activity_account">Account</string>
    <string name="searchT">Search</string>
    <string name="homeT">Home</string>
    <string name="register">Register</string>
    <string name="userName">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userDOB">Date of Birth (dd/MM/yyyy)</string>
    <string name="bmiText">BMI</string>
    <string name="bmrText">BMR</string>
    <string name="caloriesText">Recommended Calorie Intake</string>
    <string name="heartRangeText">Heart Rate Range</string>
    <string name="dash">&#45;</string>
    <string name="showHelp">Show Help</string>
    <string name="refsTitle">References</string>
    <string name="refs">http&#58;//www.irishrugby.ie/playingthegame/fitness/theyoungplayer/strength&#95;training.php</string>
    <string name="reg">Not a member? <u>Register Now</u></string>
    <string name="signInBtn">Sign In</string>
    <string name="logoutBtn">Logout</string>
    <string name="searchBtn">Search</string>
    <string name="headingSearch">Find Your Program</string>
    <string name="weightField">Weight</string>
    <string name="heightField">Height</string>
    <string name="ageField">Age</string>
    <string name="ftLabel">ft</string>
    <string name="inLabel">In</string>
    <string name="calcu">Calculate</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_register_new">RegisterNew</string>
    <string name="xBtn">X</string>
    <string name="BMIheading">Body Mass Index(BMI)</string>
    <string name="BMIdesc">The body mass index (BMI) is a physical measurement used to assess an individual\’s total amount of body fat. The BMI was invented by Belgian polymath Adolphe Quetelet in the 1800s, and consequently is sometimes known as the Quetelet index. The BMI is calculated by dividing your weight in (lbs) by your height (in) squared (m2) and multiplying by 703.</string>
    <string name="BMIheading2"><u>What does your BMI mean?</u></string>
    <string name="BMIdesc2">The BMI scores give an indirect measure of body fat. Depending on the BMI value calculated you may be underweight, healthy weight, overweight or obese. The cut off values are as follows:</string>
    <string name="BMItableHeading"><u>Table 1: BMI cut-off values</u></string>
    <string name="classif">Classification</string>
    <string name="class1"> &#60; 18.5</string>
    <string name="under">Underweight</string>
    <string name="class2"> 18.5&#45;24.9</string>
    <string name="healthy">Healthy Weight</string>
    <string name="class3"> 25.0&#45;29.9</string>
    <string name="over">Overweight</string>
    <string name="class4"> 30.0&#45;34.9</string>
    <string name="obese1">Obese Class 1</string>
    <string name="class5"> 35.0&#45;39.9</string>
    <string name="obese2">Obese Class 2</string>
    <string name="class6"> &#62;40.0</string>
    <string name="obese3">Obese Class 3</string>
    <string name="BMIheading3"><u>Why are BMIs useful?</u></string>
    <string name="BMIdesc3">The BMI is a simple, inexpensive screening tool used to identify possible weight problems for both adults and children. A BMI measurement is useful to assess who needs further testing to identify health risks such as heart disease. Individuals at risk will need further assessment. Assessments may include skin fold thickness test, diet, physical activity level, family history and other appropriate health screenings.</string>
    <string name="BMRheading">Basal Metabolic Rate(BMR)</string>
    <string name="BMRdesc">Basal metabolic rate (BMR) is the amount of energy required to maintain the body\'s normal metabolic activity, such as respiration, maintenance of body temperature (thermogenesis), and digestion. Specifically, it is the amount of energy required at rest with no additional activity. The energy consumed is sufficient only for the functioning of the vital organs such as the heart, lungs, nervous system, kidneys, liver, intestine, sex organs, muscles, and skin.</string>
    <string name="var"><u>Variance</u></string>
    <string name="caloriesHeading">Calorie Intake</string>
    <string name="util"><u>Utilization</u></string>
    <string name="utilDesc">The baseline BMR or RMR can be used along with stress/activity factors to estimate the daily caloric needs of an individual &#47; (Total Energy Expenditure (TEE)  (kcal&#47;day)).   See error rate below.</string>
    <string name="TEEh"><u>Total Energy Expenditure (TEE)</u></string>
    <string name="TeeD">The total energy expenditure (amount of calories needed per day) is composed of three primary factors: (1) Resting or basal metabolic rate   (2) Thermic effect of food  (3) Activities of daily living (ADL) &#45; physical activity.
    Thermic effect of food (TEF):
    Rough estimation: TEF &#61; Total calories consumed&#47;day x 0.1
    Example: 2000 kcal diet.    TEF &#61; 2000 x 0.1 &#61; 200 kcal&#47;day.
    TEF of protein &#62;&#62;carbohydrates&#62;&#62;fats.</string>
    <string name="factors"><u>Activity/Stress factors</u></string>
    <string name="factorsDesc">The following activity&#47;stress factors when used along with an estimation of the resting or basal metabolic rate can be used to estimate an individual\'s total energy expenditure (TEE) in kcal&#47;day  (recommend daily calories to maintain current weight &#61; RMR &#43; TEF &#43; ADL).</string>
    <string name="activityLevelH">Activity Level</string>
    <string name="dailyKcals">Daily Calories</string>
    <string name="sedU"><u>Sedentary</u></string>
    <string name="mildU"><u>Mild</u></string>
    <string name="moderateU"><u>Moderate</u></string>
    <string name="extremeU"><u>Extreme</u></string>
    <string name="sed">Sedentary</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="extreme">Extreme</string>
    <string name="dailySed">BMR x 1.2</string>
    <string name="dailyMild">BMR x 1.3 &#45; 1.375</string>
    <string name="dailyModerate">BMR x 1.5 &#45; 1.55</string>
    <string name="dailyHeavy">BMR x 1.7</string>
    <string name="dailyExtreme">BMR x 1.9</string>
    <string name="activityLevelDescH">Activity Level Description</string>
    <string name="activitySedD">Little to no exercise</string>
    <string name="activityMildD">Intensive exercise for at least 20 minutes 1 to 3 times per week. This may include such things as bicycling, jogging, basketball, swimming, skating, etc.  If you do not exercise regularly, but you maintain a busy life style that requires you to walk frequently for long periods, you meet the requirements of this level.</string>
    <string name="activityModD"> Intensive exercise for at least 30 to 60 minutes 3 to 4 times per week. Any of the activities listed above will qualify.</string>
    <string name="activityHeavyD">Intensive exercise for 60 minutes or greater 5 to 7 days per week (see sample activities above).  Labor&#45;intensive occupations also qualify for this level.  Labor&#45;intensive occupations include construction work (brick laying, carpentry, general labor, etc.). Also farming, landscape worker or similar occupations.</string>
    <string name="activityExtremeD">Exceedingly active and&#47;or very demanding activities&#58;  Examples include&#58;  athlete with an almost unstoppable training schedule with multiple training sessions throughout the day or a very demanding job, such as shoveling coal or working long hours on an assembly line. Generally, this level of activity is very difficult to achieve.</string>
    <string name="activityHDes"><u>Heavy or (Labor-intensive)</u></string>
    <string name="genderLabel">Gender</string>
    <string name="maleRadio">Male</string>
    <string name="femaleRadio">Female</string>
    <string name="calcBtn">Calculate</string>
    <string name="weightLbs">&#160;&#160;lbs</string>
    <string name="saveButton">Save</string>
    <string name="okBtn">Ok</string>
    <string name="helpTitle">Program Results</string>
    <string name="programRDesc">Welcome to the Result section. Select an exercise from the list below and enter the value you were able to perform it based on the currently selected program.</string>
    <string name="ex1">Example 1</string>
    <string name="ex1Desc">If the current program had the user perform a Bench Press at 5 repetitions for 3 sets then you would enter in the maximum amount of weight you were able to lift for that number of repetitions in any of the 3 sets. Weight can be entered as you like, e.g. kg, lbs</string>
    <string name="ex2">Example 2</string>
    <string name="ex2Desc">If the current program had the user perform 5x100m sprints then you would enter in the fastest time you were able to complete any of these in. Time can be entered as you like, e.g. seconds, minutes</string>
    <string name="showOption">Don\'t show again</string>
    <string name="dontWorry">You can change this later in Settings</string>
</resources>