<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/scrollViewBMI"
        android:layout_gravity="center_horizontal|top" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpT"
        android:text="@string/helpTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programResultsInfo"
        android:text="@string/programRDesc"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/helpT"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programResultsEx1"
        android:text="@string/ex1"
        android:layout_below="@+id/programResultsInfo"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programResultsEx1D"
        android:text="@string/ex1Desc"
        android:layout_below="@+id/programResultsEx1"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programResultsEx2"
        android:text="@string/ex2"
        android:layout_below="@+id/programResultsEx1D"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programResultsEx2D"
        android:text="@string/ex2Desc"
        android:layout_below="@+id/programResultsEx2"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showOption"
        android:id="@+id/showHide"
        android:layout_below="@+id/programResultsEx2D"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dontWorryText"
        android:text="@string/dontWorry"
        android:layout_below="@+id/showHide" />
            </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/okBtn"
        android:id="@+id/dialogBtn"
        android:layout_below="@+id/scrollViewBMI"
        android:layout_centerHorizontal="true" />

</RelativeLayout>