<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomBar" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView android:layout_width="wrap_content"
            android:id="@+id/weight"
            android:layout_height="wrap_content"
            android:text="@string/weightField"/>

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/weightLbs"
            android:ems="10"
            android:id="@+id/weightBMR"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightField"/>

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/heightFtBMR"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftLabel"
            />

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/heightInBMR"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inLabel"
            />

    </TableRow>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow1">


    <TextView android:layout_width="wrap_content"
        android:id="@+id/age"
        android:layout_height="wrap_content"
        android:text="@string/ageField"
        android:layout_below="@+id/tableRow1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ageBMR"/>

</TableRow>
    <TextView android:layout_width="wrap_content"
        android:id="@+id/gender"
        android:layout_height="wrap_content"
        android:text="@string/genderLabel"
        android:layout_below="@+id/tableRow2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/gender"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleRadio"
            android:id="@+id/radioButtonMale"
            android:layout_gravity="bottom"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleRadio"
            android:id="@+id/radioButtonFemale"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ResultBmr"
        android:hint="Result"
        android:layout_below="@+id/radioGroup"
        android:editable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/calcBtn"
        android:id="@+id/calcBMR"
        android:layout_below="@+id/ResultBmr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/saveButton"
        android:id="@+id/saveBMR"
        android:layout_below="@+id/ResultBmr"
        android:layout_toRightOf="@+id/calcBMR"
        android:layout_toEndOf="@+id/calcBMR" />

</RelativeLayout>